[gd_scene load_steps=9 format=3 uid="uid://dext6h0mcv1xh"]

[ext_resource type="Script" uid="uid://c0hjr2cewg03c" path="res://src/ui/menu/item_collection_screen.gd" id="1_6i48d"]
[ext_resource type="Shader" uid="uid://bwq5fsfwuoq07" path="res://src/asset/shader/blur.gdshader" id="3_2ep2k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yd8hq"]
shader = ExtResource("3_2ep2k")
shader_parameter/strength = 2.0

[sub_resource type="Animation" id="Animation_e53wy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightLine:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8ur6i"]
resource_name = "rotate"
length = 10.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightLine:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wktmq"]
_data = {
&"RESET": SubResource("Animation_e53wy"),
&"rotate": SubResource("Animation_8ur6i")
}

[sub_resource type="Curve" id="Curve_0mc4a"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_307rn"]
colors = PackedColorArray(1, 1, 1, 0.6, 1, 1, 1, 0)

[node name="ItemCollectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6i48d")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blur" type="ColorRect" parent="Background"]
material = SubResource("ShaderMaterial_yd8hq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Black" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wktmq")
}

[node name="LightLine" type="Node2D" parent="."]
position = Vector2(192, 64)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Line2D" type="Line2D" parent="LightLine"]
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D2" type="Line2D" parent="LightLine"]
rotation = 0.523599
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D3" type="Line2D" parent="LightLine"]
rotation = 1.0472
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D4" type="Line2D" parent="LightLine"]
rotation = 1.5708
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D5" type="Line2D" parent="LightLine"]
rotation = 2.0944
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D6" type="Line2D" parent="LightLine"]
rotation = 2.61799
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D7" type="Line2D" parent="LightLine"]
rotation = 3.14159
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D8" type="Line2D" parent="LightLine"]
rotation = 3.66519
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D9" type="Line2D" parent="LightLine"]
rotation = 4.18879
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D10" type="Line2D" parent="LightLine"]
rotation = 4.71239
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D11" type="Line2D" parent="LightLine"]
rotation = 5.23599
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="Line2D12" type="Line2D" parent="LightLine"]
rotation = 5.75959
points = PackedVector2Array(0, 0, 256, 0)
width = 64.0
width_curve = SubResource("Curve_0mc4a")
gradient = SubResource("Gradient_307rn")

[node name="ItemIcon" type="TextureRect" parent="."]
light_mask = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -92.0
offset_right = 48.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(48, 48)
expand_mode = 3

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 0.02
autostart = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -104.0
offset_right = -64.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MessageLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
light_mask = 2
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ReturnButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
light_mask = 2
layout_mode = 2
text = "MENU_RETURN"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
